# lingua-spindle

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  acceptance-v010-command-log.txt  acceptance-v010-supplement.json  acceptance-v010-supplement.md  acceptance-v010.md  compose.yaml  constraints-v010.txt  constraints-v020.txt  constraints-v030.txt  constraints-v031.txt  pyproject.toml  release-v010-report.md  third-party-components.toml
.agents/skills/repo-context/: SKILL.md
.agents/skills/repo-context/agents/: openai.yaml
.github/workflows/: ci.yml
acceptance/: README.md
acceptance/v0.1.0/: README.md
acceptance/v0.1.0/artifacts/: README.md
acceptance/v0.1.0/evidence/: checksums.sha256  publication-report.json  supplemental-docker-wsl-report.json
acceptance/v0.1.0/reports/: acceptance-report.md  publication-report.md  supplemental-docker-wsl-report.md
acceptance/v0.2.0/: README.md
acceptance/v0.2.0/artifacts/: sample-run-summary.json
acceptance/v0.2.0/artifacts/browser/: browser-evidence.json  mock-manga-export.cbz  novel-export.json  novel-export.txt
acceptance/v0.2.0/artifacts/wheel/: linguaspindle-0.2.0-py3-none-any.whl
acceptance/v0.2.0/evidence/: acceptance-report.json  checksums.sha256  command-log.txt  environment.txt  resource-measurements.json
acceptance/v0.2.0/reports/: acceptance-report.md
acceptance/v0.3.0/: README.md
acceptance/v0.3.0/artifacts/wheels/: linguaspindle-0.3.0-py3-none-any.whl
acceptance/v0.3.0/evidence/: acceptance-report.json  checksums.sha256  command-log.txt  container-report.json  environment.json  environment.txt  extras-report.json  import-boundary.json  sample-checksums.sha256  wheel-report.json
acceptance/v0.3.0/reports/: acceptance-report.md
acceptance/v0.3.1/: README.md
acceptance/v0.3.1/evidence/: acceptance-report.json  checksums.sha256  command-log.txt  compose-report.json  container-report.json  environment.json  environment.txt  extras-report.json  import-boundary.json  migration-report.json  sample-checksums.sha256  security-report.json  wheel-report.json
acceptance/v0.3.1/reports/: acceptance-report.md
docs/: DECISIONS.md  MODULE_MAP.md  PRODUCT_SPEC.md  PROJECT_STATE.md  adapter-development.md  api.md  architecture.md  cli.md  data-model.md  docker.md  epub.md  installation.md  library-api.md
docs/adr/: 0001-no-user-system-and-loopback-default.md  0002-standalone-shared-application-core.md  0003-capability-adapters-and-artifacts.md  0004-python-modular-monolith-and-sqlite-runner.md  0005-runtime-only-provider-secrets.md  0006-manga-image-translator-external-adapter.md  0007-epub-round-trip-and-bounded-archive-processing.md  0008-headless-library-first-orchestration-core.md  0009-server-idempotency-and-request-correlation.md
docs/migrations/: v0.2-to-v0.3.md  v0.3-to-v0.3.1.md
docs/releases/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.3.1.md
docs/research/: name-availability.md  translation-tools.md
src/linguaspindle/: __init__.py  application.py  config.py  database.py  epub.py  errors.py  idempotency.py  json_types.py  limits.py  models.py  security.py  storage.py
src/linguaspindle/adapters/: __init__.py  base.py  manga_image_translator.py  mock_manga.py
src/linguaspindle/core/: __init__.py  documents.py  io.py  manga.py  models.py  orchestration.py  txt.py
src/linguaspindle/interfaces/: __init__.py  _typer_cli.py  api.py  cli.py
src/linguaspindle/migrations/: 0001_initial.sql  0002_epub.sql  0003_headless_core.sql  0004_service_idempotency.sql  __init__.py
src/linguaspindle/orchestration/: __init__.py  engine.py  pipelines.py  state.py
src/linguaspindle/providers/: __init__.py  base.py  mock.py  openai_compatible.py
src/linguaspindle/runtime/: __init__.py
src/linguaspindle/web/: app.js  index.html  styles.css
tests/: conftest.py
tests/browser/: test_gui_flow.py
tests/core/: test_documents.py  test_dto_serialization.py  test_import_and_public_api.py  test_manga.py
tests/integration/: test_adapter_orchestration.py  test_api_cli_shared.py  test_artifacts_and_secrets.py  test_database_migrations.py  test_epub_controls.py  test_epub_pipeline.py  test_headless_document_api.py  test_job_controls.py  test_manga_pipeline.py  test_novel_pipeline.py  test_openapi_contract.py  test_recovery.py  test_service_idempotency.py  test_web_epub_gui.py
tests/unit/: test_config.py  test_doctor.py  test_epub.py  test_idempotency.py  test_manga_adapter.py  test_provider.py  test_repository_surface.py  test_security.py  test_segmentation.py  test_state.py  test_storage.py
tools/: generate_v020_acceptance.py  generate_v030_acceptance.py  generate_v031_acceptance.py  verify_v030_extras.py  verify_v031_extras.py
(+34 files in other folders)
